<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="64dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"

        android:layout_marginEnd="24dp"

        android:hint="@string/name"
        app:boxBackgroundMode="outline"

        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"

        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:counterEnabled="true"
        app:counterMaxLength="25"

        app:helperText="@string/enter_name"

        app:layout_constraintBottom_toTopOf="@id/user_bdate_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:startIconDrawable="@drawable/ic_user">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text"
            android:inputType="text"
            android:focusable="true"
            android:clickable="true"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_bdate_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        app:startIconDrawable="@drawable/ic_date"

        android:layout_marginEnd="24dp"
        android:hint="@string/bdate"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"

        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"

        app:boxCornerRadiusTopStart="10dp"
        app:helperText="@string/enter_bdate"

        app:layout_constraintTop_toBottomOf="@id/user_name_til"
        app:layout_constraintBottom_toTopOf="@id/user_count_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_bdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text"
            android:inputType="date"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--android:focusable="true"-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_count_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginEnd="24dp"

        android:hint="@string/count"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"

        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:counterEnabled="true"
        app:counterMaxLength="9"

        app:helperText="@string/enter_count"

        app:layout_constraintBottom_toTopOf="@id/user_email_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_bdate_til"
        app:startIconDrawable="@drawable/ic_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text"
            android:inputType="number"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginEnd="24dp"

        android:layout_marginBottom="32dp"
        android:hint="@string/email"
        app:boxBackgroundMode="outline"

        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"

        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:counterEnabled="true"
        app:counterMaxLength="50"

        app:helperText="@string/enter_email"
        app:layout_constraintBottom_toTopOf="@id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_count_til"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_til"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="64dp" />

</androidx.constraintlayout.widget.ConstraintLayout>